# GemClaw

./: .env.example  .firebaserc  .gitignore  ADVANCED_SKILLS_IMPLEMENTATION_STATUS.md  AetherOS.command  CONTRIBUTING.md  Cargo.toml  FINAL_DEPLOYMENT_SUMMARY.md  GemclawAIOS.command  GemigramAIOS.command  MCP_COMPLETE_SUMMARY.md  MCP_FINAL_DEPLOYMENT_REPORT.md  MCP_INTEGRATION_COMPLETE.md  README.md  build_output.txt  deploy-firebase.sh  eslint.config.mjs  find_useeffect.js  find_useeffect2.js  find_useeffect3.js  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firebase.ts  firestore.rules  metadata.json  next.config.ts  node_modules_clean  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  update_dnd.sh  vitest.config.ts
.idx/: memories.md
__tests__/: bridgeStatusManager.test.ts  example.test.ts  serverAuth.test.ts
app/: globals.css  layout.tsx  page.tsx
backend/: go.mod  go.sum  main.go
components/: ActiveIntelligence.tsx  AetherLogo.tsx  AppShell.tsx  ConversationalAgentCreator.tsx  CreateAgentForm.tsx  DeployAgentButton.tsx  DigitalEntity.tsx  ForgeArchitect.tsx  ForgeChamber.tsx  GemclawLogo.tsx  GemigramLogo.tsx  HeroBackground.tsx  MarketplaceHub.tsx  MemoryWidget.tsx  MiniAgentHUD.tsx  NeuralNetworkGraph.tsx  NeuralPulse.tsx  Providers.tsx  SoulSwapTransition.tsx  SovereignDashboard.tsx  SystemMetrics.tsx  ThemeToggle.tsx  VoiceAgent.tsx  VoiceLab.tsx  WidgetRenderer.tsx  Workspace.tsx
docs/: API.md  (+2 more)
neural-voice-engine/: Cargo.toml
neural-voice-engine/src/: lib.rs
(+215 files in other folders)
