[package]
name = "neural-voice-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust-WASM engine for AetherOS Voice-Spine."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioNode",
    "AudioWorkletGlobalScope",
    "AudioWorkletProcessor",
    "console"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
